# AI-Recruitment-And-Observability-Engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  temp_jd.txt  temp_resume.txt
src/: api.py  graph.py
src/agents/: jd_parser.py  optimist.py  ranker.py  resume_parser.py  skeptic.py
src/utils/: logger.py  ocr.py
tests/: test_api.py
