[project]
name = "ai-recruitment-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "langsmith>=0.7.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
